<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.panachai.vocabulary_20words.MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/explain_language"
        android:textSize="25sp" />

    <Button
        android:id="@+id/button_thai"
        android:layout_width="match_parent"
        android:layout_height="100sp"
        android:layout_marginTop="21dp"
        android:onClick="THAI"
        android:text="@string/thai_language"
        android:textSize="25sp"
        android:layout_below="@+id/textView"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="by Panachai"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:id="@+id/textView23" />

    <TextView
        android:id="@+id/mainUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="USERNAME"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/button_eng"
        android:layout_width="match_parent"
        android:layout_height="100sp"
        android:onClick="ENG"
        android:text="@string/eng_language"
        android:textSize="25sp"
        android:layout_below="@+id/button_thai"
        android:layout_alignParentStart="true" />

    <Button
        android:text="PRACTICE"
        android:onClick="PRACTICE"
        android:layout_width="match_parent"
        android:layout_height="100sp"
        android:id="@+id/bt_Practice"
        android:textSize="25sp"
        android:layout_below="@+id/button_eng"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/bt_profile"

        android:onClick="PROFILE"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="11dp"
        android:text="Profile"
        android:layout_above="@+id/textView23"
        android:layout_alignParentEnd="true" />

    <Button
        android:onClick="HISTORYSCORE"

        android:id="@+id/score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/bt_profile"
        android:layout_toStartOf="@+id/bt_profile"
        android:text="SCORE" />


</RelativeLayout>
